# potree-rs

./: CONVERTER.md  Cargo.toml  README.md  build_wasm.sh  build_wasm_worker.sh  serve.js
.zed/: settings.json
examples/: dump_potree.rs  read_native.rs  read_native_blocking_fs.rs  read_native_blocking_http.rs  read_native_flat.rs  read_native_fs.rs  read_native_fs_ply.rs  read_native_http.rs  read_native_slab.rs  read_wasm.rs  read_wasm_worker.rs
src/: flat_hierarchy.rs  hierarchy.rs  lib.rs  metadata.rs  morton.rs  parse.rs  point.rs  point_cloud.rs  prelude.rs
src/asset/: fs.rs  http.rs  mod.rs  url.rs
src/blocking/: hierarchy.rs  mod.rs  point_cloud.rs
src/blocking/asset/: fs.rs  http.rs  mod.rs  url.rs
src/convert/: buffer.rs  mod.rs  ply_loader.rs  streaming.rs
src/octree/: aabb.rs  mod.rs  node.rs  snapshot.rs
src/resource/: buffer.rs  ehttp.rs  ehttp_local.rs  file.rs  mod.rs  reqwest.rs
tests/: streaming_hierarchy.rs  streaming_roundtrip.rs  streaming_smoke.rs
wasm/: index.html
