[package]
name = "potree"
version = "0.1.0"
edition = "2024"

[[example]]
name = "read_wasm"
required-features = ["wasm"]

[[example]]
name = "read_wasm_worker"
required-features = ["wasm_worker"]

[[example]]
name = "read_native_slab"
required-features = ["fs", "tokio_dev"]

[[example]]
name = "read_native_fs"
required-features = ["fs"]

[[example]]
path = "examples/read_native_http.rs"
name = "read_native_ehttp"
required-features = ["ehttp", "tokio_dev"]

[[example]]
path = "examples/read_native_http.rs"
name = "read_native_reqwest"
required-features = ["reqwest", "tokio_dev"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "io-util"], optional = true }
async-fs = { version = "2.0", optional = true }
futures = "0.3"
reqwest = { version = "0.12", optional = true }
ehttp = { version = "0.5", optional = true }
binrw = "0.15.0"
glam = "0.30.5"
wasm-bindgen = { version = "=0.2.106", optional = true }
wasm-bindgen-futures = { version = "=0.4.56", optional = true }
slab = "0.4"
url = { version = "2.5" }
brotli-decompressor = "5.0"
byteorder = "1.5.0"

[dev-dependencies]
wasm_thread = { version = "0.3.3" }
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1.0"

[features]
default = []
fs = []
tokio = ["dep:tokio", "tokio/rt"]
tokio_dev = ["tokio/macros", "tokio/rt"]
async-fs = ["dep:async-fs"]
reqwest = ["tokio", "dep:reqwest"]
wasm = ["ehttp", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
wasm_worker = ["ehttp_local", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
ehttp = ["dep:ehttp"]
ehttp_local = ["ehttp", "wasm", "dep:wasm-bindgen-futures"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[profile.wasm-release]
inherits = "release"
opt-level = "s"
