[package]
name = "potree"
version = "0.1.0"
edition = "2024"

[[example]]
name = "read_wasm"
required-features = ["wasm", "slab"]

[[example]]
name = "read_wasm_worker"
required-features = ["wasm_worker", "slab"]

[[example]]
name = "read_native_slab"
required-features = ["fs", "tokio_dev", "slab"]

[[example]]
name = "read_native_fs"
required-features = ["fs", "tokio_dev"]

[[example]]
name = "read_native_blocking_fs"
required-features = ["blocking_fs"]


[[example]]
name = "read_native_fs_ply"
required-features = ["convert", "slab", "tokio_dev"]

[[example]]
path = "examples/read_native_http.rs"
name = "read_native_ehttp"
required-features = ["ehttp", "tokio_dev"]

[[example]]
path = "examples/read_native_http.rs"
name = "read_native_reqwest"
required-features = ["reqwest", "tokio_dev"]

[[example]]
path = "examples/read_native_blocking_http.rs"
name = "read_native_blocking_http"
required-features = ["blocking_reqwest"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "io-util"], optional = true }
futures = "0.3"
reqwest = { version = "0.12", optional = true, features = ["json"] }
ehttp = { version = "0.5", optional = true }
binrw = "0.15.0"
glam = "0.30.5"
wasm-bindgen = { version = ">=0.2.106", optional = true }
wasm-bindgen-futures = { version = ">=0.4.56", optional = true }
slab = { version = "0.4", optional = true }
url = { version = "2.5" }
brotli-decompressor = "5.0"
byteorder = "1.5.0"
clap = { version = "4", features = ["derive"], optional = true}
ply-rs-bw = { version = "3.0.0", optional = true }
rand = { version = "0.8", optional = true }
indicatif = "0.18.4"
rayon = { version = "1.10", optional = true }
tempfile = { version = "3", optional = true }
brotli = "8.0.2"
bytes = "1.0"

[dev-dependencies]
wasm_thread = { version = "0.3.3" }
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1.0"

[features]
default = []
async = []
fs = ["async"]
blocking_fs = []
tokio = ["dep:tokio", "tokio/rt"]
tokio_dev = ["tokio/macros", "tokio/rt"]
reqwest = ["async", "tokio", "dep:reqwest"]
blocking_reqwest = ["reqwest/blocking"]
wasm = ["ehttp", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
wasm_worker = ["ehttp_local", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
ehttp = ["async", "dep:ehttp"]
ehttp_local = ["ehttp", "wasm", "dep:wasm-bindgen-futures"]
convert = ["fs", "dep:clap", "dep:ply-rs-bw", "dep:rand", "dep:rayon", "dep:tempfile"]
slab = ["dep:slab"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[profile.wasm-release]
inherits = "release"
opt-level = "s"

[[bin]]
name = "ply_to_potree"
required-features = ["convert"]
